# terrainator

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp  pnoise.cpp
